--- a/content/blog/getting-started-with-java-development-2023.asciidoc
+++ b/content/blog/getting-started-with-java-development-2023.asciidoc
@@ -115,6 +115,13 @@ openjdk 17.0.5 2022-10-18
 ...
 ----
 
+[NOTE]
+.Installation in Windows
+====
+SDKMan is implemented in bash, so if you are on Windows, you'll need to install either the Windows Subsystem for Linux (WSL) or Cygwin before you can use SDKMan.
+I'd recommend having either in any case, but if that's not an option, the simplest probably is installing Java on Windows by downloading your distribution directly from its vendors website.
+====
+
 == 💡 Your First Java Program
 
 Having installed Java, it's time to write your first Java program.
@@ -311,3 +318,5 @@ Finally, a few resources which should help you to stay up-to-date with everythin
 the https://dev.java/news/[Java News] on dev.java,
 https://inside.java/[inside.java] ("news and views from members of the Java team at Oracle")
 the https://chriswhocodes.com/jepsearch.html[JEP Search] (for searching and filtering Java enhancement proposals, i.e. changes to the language and the platform) and https://foojay.io/[Foojay] (Friends of OpenJDK).
+
+_Many thanks to https://twitter.com/nilshartmann[Nils Hartmann], https://twitter.com/aalmiray/[Andres Almiray], and https://twitter.com/djcordhose[Oliver Zeigermann] for their input and feedback while writing this post!_
