Adding ling to "awesome-java" list

--- a/content/blog/getting-started-with-java-development-2023.asciidoc
+++ b/content/blog/getting-started-with-java-development-2023.asciidoc
@@ -247,6 +247,7 @@ https://github.com/FasterXML/jackson[Jackson] (JSON handling),
 https://hibernate.org/[Hibernate] (object-relational persistence, domain model validation, etc.),
 https://www.testcontainers.org/[Testcontainers] (integration testing with Docker), and
 https://www.archunit.org/[ArchUnit] (enforcing software architecture rules).
+The https://github.com/akullpp/awesome-java["awesome-java"] list is a great starting point for diving into the ecosystem of Java libraries.
 
 Most open-source dependencies are available via the https://search.maven.org/[Maven Central] repository;
 All the build tools integrate with it, not only Maven itself, but also Gradle and all the others.
