--- a/content/blog/getting-started-with-java-development-2023.asciidoc
+++ b/content/blog/getting-started-with-java-development-2023.asciidoc
@@ -120,7 +120,7 @@ openjdk 17.0.5 2022-10-18
 .Installation in Windows
 ====
 SDKMan is implemented in bash, so if you are on Windows, you'll need to install either the Windows Subsystem for Linux (WSL) or Cygwin before you can use SDKMan.
-I'd recommend having either in any case, but if that's not an option, the simplest probably is installing Java on Windows by downloading your distribution directly from its vendors website.
+I'd recommend having either in any case, but if that's not an option, you may install Java using the https://github.com/microsoft/winget-cli[winget] package manager or by downloading your distribution directly from its vendors website.
 ====
 
 == 💡 Your First Java Program
