Note on Maven install

--- a/content/blog/getting-started-with-java-development-2023.asciidoc
+++ b/content/blog/getting-started-with-java-development-2023.asciidoc
@@ -180,6 +180,7 @@ Commonly used build tool options for Java include https://maven.apache.org/[Apac
 
 My recommendation is to stick with *Maven* for the beginning;
 it's the most widely used one, and in my opinion the easiest to learn.
+Installing it is as simple as running `sdk install maven` with SDKMan.
 While it defines a rather rigid structure for your project,
 that also frees you from having to think about many aspects, which is great in particular when getting started.
 Maven has support for archetypes, templates which you can use to quickly bootstrap new projects.
