Adding link to Eclipse IDE

--- a/content/blog/getting-started-with-java-development-2023.asciidoc
+++ b/content/blog/getting-started-with-java-development-2023.asciidoc
@@ -244,7 +244,7 @@ e.g. for testing and debugging your code.
 It integrates very well with Maven-based projects and has a rich eco-system of plug-ins you can tap into.
 
 As your needs grow, you'll probably look for an IDE which comes with even more advanced functionality, e.g. when it comes to refactoring your code.
-While I'm personally a happy user of the Eclipse IDE,
+While I'm personally a happy user of the https://www.eclipse.org/ide/[Eclipse IDE],
 most folks tend to use https://www.jetbrains.com/idea/[*IntelliJ IDEA*] these days and it's thus what I'd recommend you to look into too.
 It comes with a feature-rich free community edition which will help you a lot with the day-to-day tasks you'll encounter as a Java developer.
 Make sure to spend a few hours learning the most important keyboard short-cuts,
