--- a/content/conferences/index.asciidoc
+++ b/content/conferences/index.asciidoc
@@ -106,3 +106,7 @@ If you'd like to have me as a speaker at your conference or meet-up, please get 
 == 2016
 
 * JavaZone, Oslo: https://vimeo.com/groups/jz2016/videos/181788146[From Hibernate to Elasticsearch in no time]
+
+== 2013
+
+* Berlin Expert Days: Bean Validation 1.1 - Whats Cooking? (https://bed-con.org/2013/files/slides/Bean_Validation_1.1_-_Whats_Cooking.pdf[slides])
